part threee, schedulers.

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>p1</module>
         <module>p2</module>
+        <module>p3</module>
     </modules>
 
     <dependencyManagement>
