--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>p1</module>
         <module>p2</module>
         <module>p3</module>
+        <module>p4</module>
     </modules>
 
     <dependencyManagement>
