--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>p2</module>
         <module>p3</module>
         <module>p4</module>
+        <module>p5</module>
     </modules>
 
     <dependencyManagement>
