--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>p3</module>
         <module>p4</module>
         <module>p5</module>
+        <module>p6</module>
     </modules>
 
     <dependencyManagement>
