--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>p5</module>
         <module>p6</module>
         <module>p7</module>
+        <module>p8</module>
     </modules>
 
     <dependencyManagement>
