--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>p6</module>
         <module>p7</module>
         <module>p8</module>
+        <module>p9</module>
     </modules>
 
     <dependencyManagement>
